# memory

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
scripts/: build-binary.sh
skills/memory-forget/: SKILL.md
skills/memory-recall/: SKILL.md
skills/memory-search/: SKILL.md
skills/memory-stats/: SKILL.md
src/memory/: __init__.py  cli.py  config.py  ingester.py  init.py  migrate.py  searcher.py  server.py  ui.py
src/memory/install/: __init__.py  hook.py  mcp.py  skills.py
src/memory/parsers/: __init__.py  claude_code.py
src/memory/templates/: claudemd_section.md
src/memory/templates/commands/: memory-forget.md  memory-recall.md  memory-search.md  memory-stats.md
src/memory/templates/context/: README.md
tests/: conftest.py  test_binary_smoke.py  test_cli.py  test_config.py  test_dependencies.py  test_index_rebuild.py  test_ingest_search.py  test_init.py  test_install_hook.py  test_install_mcp.py  test_install_resolver.py  test_install_skills.py  test_mcp_server.py  test_migrate.py  test_parser.py  test_quiet_mode.py  test_readme_commands.py  test_search_modes.py  test_skill_templates.py  test_vector_quality.py
tests/fixtures/: vector_quality_golden.json
